mais verificações com zenity